// -*- mode: protobuf; indent-tabs-mode: t; c-basic-offset: 8; tab-width: 8 -*-
syntax = "proto3";

package chef.automate.domain.cs_nginx;
option go_package = "github.com/chef/automate/api/config/cs_nginx";
import "config/shared/global.proto";
import "config/shared/tls.proto";
import "automate-grpc/protoc-gen-a2-config/api/a2conf/annotations.proto";
import "google/protobuf/wrappers.proto";

message ConfigRequest {
  option (chef.automate.api.service_config) = {name: "automate-cs-nginx"};

	V1 v1 = 1;

	message V1 {
		System sys = 1;
		Service svc = 2;

		message System {
			chef.automate.infra.config.Mlsa mlsa = 1;
			Log log = 2;
			Service service = 3;
			Nginx ngx = 4;
			chef.automate.infra.config.TLSCredentials tls = 5;
			RequiredRecipe required_recipe = 6;
			ExternalAutomate external_automate = 7;

			message Service {
				google.protobuf.StringValue host = 1 [deprecated=true]; // The listen host is no longer setable(localhost only)
				google.protobuf.Int32Value port = 2 [ (chef.automate.api.port) = { name: "service", default: 10200, protocol: "https" } ];
				google.protobuf.Int32Value status_port = 3 [ (chef.automate.api.port) = { name: "status", default: 10204, protocol: "http" } ];
			}

			message Log {
				google.protobuf.StringValue level = 1;
			}

			message Nginx {
				Main main = 1;
				Events events = 2;
				Http http = 3;

				message Main {
					google.protobuf.Int32Value worker_processes = 1;
				}

				message Events {
					google.protobuf.Int32Value worker_connections = 1;
				}

				message Http {
					google.protobuf.StringValue client_max_body_size = 1;
					google.protobuf.Int32Value proxy_connect_timeout = 2;
					google.protobuf.Int32Value keepalive_timeout = 3;
					google.protobuf.StringValue gzip = 4;
					google.protobuf.StringValue gzip_http_version = 5;
					// StringValue for consitency with other nginx configs
					google.protobuf.StringValue gzip_comp_level = 6;
					google.protobuf.StringValue gzip_proxied = 7;
					google.protobuf.StringValue gzip_types = 8;
					google.protobuf.StringValue sendfile = 9;
					google.protobuf.StringValue tcp_nodelay = 10;
					google.protobuf.StringValue tcp_nopush = 11;
					google.protobuf.StringValue ssl_ciphers = 12;
					google.protobuf.StringValue ssl_protocols = 13;
					reserved 14;
					google.protobuf.Int32Value ssl_verify_depth = 15;
					google.protobuf.Int32Value server_names_hash_bucket_size = 16;
					google.protobuf.StringValue client_body_buffer_size = 17;
				}
			}

			message RequiredRecipe {
				google.protobuf.BoolValue enabled = 1;
				google.protobuf.StringValue path = 2;
				// Auto-calculated
				google.protobuf.StringValue content_md5 = 3;
			}

			message ExternalAutomate {
				google.protobuf.BoolValue enable = 1;
				google.protobuf.BoolValue ssl_upstream = 2;
				google.protobuf.StringValue endpoint = 3;
				google.protobuf.StringValue token = 4;
				google.protobuf.StringValue root_cert = 5;
				google.protobuf.StringValue server_name = 6;
			};
		}

		message Service {
		}
	}
}
