syntax = "proto3";

package chef.automate.domain.local_user;
option go_package = "github.com/chef/automate/api/config/local_user";

import "config/shared/global.proto";
import "config/shared/tls.proto";
import "automate-grpc/protoc-gen-a2-config/api/a2conf/annotations.proto";
import "google/protobuf/wrappers.proto";

message ConfigRequest {
	option (chef.automate.api.service_config) = {name: "local-user-service"};

	reserved 1 to 2;
	V1 v1 = 3;
	message V1 {
		System sys = 1;
		Service svc =  2;

		message System {
			chef.automate.infra.config.Mlsa mlsa = 1;
			chef.automate.infra.config.TLSCredentials tls = 2;
			Service service = 3;
			Logger logger = 4;

			message Service {
				google.protobuf.StringValue host = 1 [deprecated=true]; // The listen host is no longer setable(localhost only)
				google.protobuf.Int32Value port = 2 [ (chef.automate.api.port) = { name: "service", default: 10127, protocol: "grpc" } ];
				google.protobuf.StringValue external_fqdn = 3;
			}

			message Logger {
				google.protobuf.StringValue format = 1;
				google.protobuf.StringValue level = 2;
			}
		}

		message Service {
		}
	}
}
